# workers/openapi.yaml
@@ -565,8 +565,8 @@ paths:
                     items:
                       $ref: '#/components/schemas/SettingsResponseDto'
 
-    post:
-      summary: Create a new setting
+    put:
+      summary: Create or update a setting
       security:
         - bearerAuth: []
       requestBody:
@@ -576,15 +576,9 @@ paths:
             schema:
               $ref: '#/components/schemas/SettingsDto'
       responses:
-        '201':
-          description: Setting created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  setting:
-                    $ref: '#/components/schemas/SettingsResponseDto'
+        '204':
+          description: Setting created or updated successfully
+          content: {}
 
   /settings/{key}:
     get:
@@ -603,39 +597,9 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  setting:
-                    $ref: '#/components/schemas/SettingsResponseDto'
+                $ref: '#/components/schemas/SettingsResponseDto'
         '404':
           description: Setting not found
-
-    put:
-      summary: Update a setting
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: key
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SettingsDto'
-      responses:
-        '200':
-          description: Setting updated
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  setting:
-                    $ref: '#/components/schemas/SettingsResponseDto'
 
     delete:
       summary: Delete a setting
